--- a/L#02_remove_outliers/outliers.ipynb
+++ b/L#02_remove_outliers/outliers.ipynb
@@ -461,7 +461,7 @@
    "source": [
     "# to remove outliers we need to find out the lower and upper fence \n",
     "# lower_fence = Q1 - 1.5(IQR)\n",
-    "# lower_fence = Q3 + 1.5(IQR)\n",
+    "# upper_fence = Q3 + 1.5(IQR)\n",
     "# Q1 = value at 25% percentile\n",
     "# Q3 = value at 75% percentile\n",
     "\n",
